--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,19 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
+  align-items: center;
+  background-color: #282c34;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  justify-content: center;
+  margin: 0;
+  min-height: 100vh;
+  padding: 0;
   text-align: center;
 }
 
@@ -11,21 +26,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
