--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 16px;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0;
   min-height: 100vh;
   padding: 0;
