ajusting CSS and creating Provider

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
-/* .table {
-  display: flex;
-  flex-direction: row;
-} */
+body {
+  margin: 15px;
+  padding: 0;
+  border: 0;
+}
+
+h1{
+  font-size: 45px;
+  font-weight: 500;
+}
+
+.name-filter {
+  padding: 15px;
+  font-weight: 900;
+  font-size: 18px;
+}
