Adding second requirement

--- a/src/style/table.css
+++ b/src/style/table.css
@@ -3,7 +3,7 @@ table {
   border: 1px solid black;
 }
 
-.table-header {
+/* .table-header {
   width: 10%;
 }
 
@@ -12,4 +12,4 @@ table {
   width: 100%;
   justify-content: space-around;
   align-items: center;
-}
+} */
