--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,6 @@
 body {
+  font-family: sans-serif;
+  font-size: 14px;
   margin: 0;
   padding: 0;
 }
@@ -6,6 +8,7 @@ body {
 .App {
   align-items: center;
   background-color: #282c34;
+  box-shadow: inset 0px 7px 11px -4px rgba(10, 10, 20, .9);
   color: white;
   display: flex;
   flex-direction: column;
