--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,20 +1,77 @@
 .Header {
-  align-items: center;
+  align-items: space-around;
   background-color: #20242c;
   color: white;
   display: flex;
-  flex-direction: column;
+  flex-flow: row nowrap;
   font-size: 16px;
-  justify-content: center;
+  justify-content: space-around;
   margin: 0;
   padding: 20px;
-  text-align: center;
 }
 
-.Header input {
+.Header input, .Header select, .Header button {
+  box-shadow: 2px 2px 6px 1px rgba(10, 10, 20, .7);
+}
+
+.Header input:not( [type="number"] ) {
   background-color: #eceff3;
   border: 0;
   border-radius: 10px;
+  color: rgb(20, 20, 30);
+  font-size: 0.9em;
   padding: 8px 14px;
-  width: 200px;
+  width: 260px;
+}
+
+.Header select {
+  appearance: none;
+  background-color: #dae0e7;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 101%;
+  background-position-y: 5px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 0.9em;
+  margin: 0 4px;
+  padding: 4px 8px;
+  min-width: 160px;
+}
+
+.Header input[type="number"] {
+  background-color: #dae0e7;
+  border: 0;
+  border-radius: 5px;
+  font-size: 0.9em;
+  margin: 0 4px;
+  padding: 5px 8px;
+  width: 120px;
+}
+
+.Header button {
+  background-color: #42648a;
+  color: #e0eaf5;
+  border: 0;
+  border-radius: 9px;
+  font-size: 1em;
+  font-weight: 700;
+  margin: 0 0 0 14px;
+  padding: 5px 15px 6px;
+}
+/* 395575 4a6f99 */
+
+.Header button:hover {
+  background-color: #4a6f99;
+}
+
+.Header button:focus {
+  background-color: #395f8a;
+}
+
+.Header button:active {
+  background-color: #375170;
+  position: relative;
+  top: 1px;
+  left: 1px;
 }
