--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,166 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color:  rgb(75, 74, 74);
+}
+.home {
+  background-color: rgb(75, 74, 74);
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: 'Bebas Neue', cursive;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 35px;
+  background-color: rgb(75, 74, 74);
+}
+.logo {
+  margin: 15px 0;
+}
+.filter-name {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 8px;
+}
+.filter-name input {
+  padding: 10px;
+  width: 250px;
+  height: 25px;
+}
+
+input, select, button {
+  background-color: white;
+  border: 2px solid #9bd0fc;
+  outline: none;
+  border-radius: 4px;
+}
+.filter-comparison input {
+  height: 45px;
+  text-align: center;
+}
+select {
+  height: 45px;
+  cursor: pointer;
+  margin: 0 3px;
+}
+
+input:nth-child(3) {
+  width: 50px;
+}
+
+input::placeholder, select::placeholder {
+  color: #9bd0fc;
+  font-weight: bolder;
+  font-size: 11pt;
+  letter-spacing: 2px;
+}
+
+.hexagon {
+  position: absolute;
+  width: 50px;
+  height: 8px;
+  bottom: -2px;
+  right: 17%;
+  background-image: url('./blue-grey2.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+button {
+  cursor: pointer;
+}
+button:hover {
+  background-color: #9bd0fc;
+  color: white;
+  transition: 450ms;
+}
+.inputs {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.brother button {
+  width: 80%;
+  padding: 10px;
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+.brother {
+  text-align: center;
+  padding: 25px;
+  border-radius: 10px;
+}
+
+.custom-fitlers {
+  max-height: 180px;
+  overflow-y: scroll;
+  width: 20%;
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.custom-fitlers button {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-left: 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.each-filter {
+  margin: 8px 0;
+  display: flex;
+  border-radius: 25px;
+  justify-content: center;
+  align-items: center;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 15px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:  #9bd0fc;
+  border-radius: 15px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background:  #82b9e7;
+  border-radius: 15px;
+}
+
+table {
+  background-color: #9bd0fc;
+  color: rgb(75, 74, 74);
+  font-family: 'Bebas Neue', cursive;
+  font-weight: lighter;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+tr td, tr th {
+  padding: 10px;
+}
+
+tr th {
+  border: 2px solid white
+}
+
+tr td {
+  border: 2px solid white;
 }
