--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -5,32 +5,119 @@ body {
 
 .App {
   color: #dddddd;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
-.Header {
+.header {
+  height: 120px;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-.Header label {
+.header .img {
+  width: 30%;
+}
+
+.header .header-size {
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 50%;
+}
+
+.header .header-size label {
   color: #dddddd;
   font-weight: bold;
   font-size: 20px;
+}
+
+.header .header-size .planet-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header .header-size .planet-name input {
+  border: 2px solid #c011b7;
+  border-radius: 5px;
+  outline: none;
+  width: 50%;
+}
+
+.header .header-size .filters-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 50%;
+}
+
+.header .header-size .filters-input select {
+  background-color: white;
+  border: 2px solid #c011b7;
+  border-radius: 5px;
+  outline: none;
+  width: 30%;
+}
+
+.header .header-size .filters-input input {
+  border: 2px solid #c011b7;
+  border-radius: 5px;
+  outline: none;
+  width: 20%;
+}
+
+.header .header-size .filters-input button {
+  background: none;
+  color: #dddddd;
+  border: 2px solid #c011b7;
+  border-radius: 5px;
+  font-weight: bold;
+  outline: none;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.header .header-size .filters-input button:hover {
+  background: #c011b7;
+  outline: none;
+  -webkit-transition: 0.05s;
+  transition: 0.05s;
 }
 
 .filter-section {
@@ -46,7 +133,7 @@ body {
   width: 100%;
 }
 
-.filters {
+.filter-section .filters {
   background-color: #c011b7;
   border-radius: 15px;
   color: #dddddd;
@@ -69,14 +156,51 @@ body {
   padding-right: 5px;
 }
 
-.filters button {
+.filter-section .filters button {
   background: none;
   border: none;
   font-weight: bold;
   outline: none;
 }
 
-.filters button:hover {
+.filter-section .filters button:hover {
   color: #d60000;
+}
+
+.table {
+  background-color: rgba(0, 0, 0, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  overflow: auto;
+  font-size: 18px;
+}
+
+.table table {
+  border-collapse: collapse;
+}
+
+.table th {
+  background-color: #1a1a1a;
+  border: 2px solid black;
+  font-weight: bold;
+  padding: 10px;
+  word-wrap: break-word;
+}
+
+.table tbody tr:nth-child(odd) {
+  background-color: #5e5c5c;
+  text-align: center;
+}
+
+.table tbody tr:nth-child(even) {
+  background-color: #c3c3c3;
+  color: black;
+  text-align: center;
 }
 /*# sourceMappingURL=App.css.map */
