--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -133,7 +133,7 @@ body {
   width: 100%;
 }
 
-.filter-section .filters {
+.filter-section .filters-population {
   background-color: #c011b7;
   border-radius: 15px;
   color: #dddddd;
@@ -156,14 +156,150 @@ body {
   padding-right: 5px;
 }
 
-.filter-section .filters button {
+.filter-section .filters-population button {
   background: none;
   border: none;
   font-weight: bold;
   outline: none;
 }
 
-.filter-section .filters button:hover {
+.filter-section .filters-population button:hover {
+  color: #d60000;
+}
+
+.filter-section .filters-rotation_period {
+  background-color: blue;
+  border-radius: 15px;
+  color: #dddddd;
+  font-size: 20px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: 20px;
+  padding-left: 10px;
+  padding-right: 5px;
+}
+
+.filter-section .filters-rotation_period button {
+  background: none;
+  border: none;
+  font-weight: bold;
+  outline: none;
+}
+
+.filter-section .filters-rotation_period button:hover {
+  color: #d60000;
+}
+
+.filter-section .filters-orbital_period {
+  background-color: orange;
+  border-radius: 15px;
+  color: #dddddd;
+  font-size: 20px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: 20px;
+  padding-left: 10px;
+  padding-right: 5px;
+}
+
+.filter-section .filters-orbital_period button {
+  background: none;
+  border: none;
+  font-weight: bold;
+  outline: none;
+}
+
+.filter-section .filters-orbital_period button:hover {
+  color: #d60000;
+}
+
+.filter-section .filters-diameter {
+  background-color: green;
+  border-radius: 15px;
+  color: #dddddd;
+  font-size: 20px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: 20px;
+  padding-left: 10px;
+  padding-right: 5px;
+}
+
+.filter-section .filters-diameter button {
+  background: none;
+  border: none;
+  font-weight: bold;
+  outline: none;
+}
+
+.filter-section .filters-diameter button:hover {
+  color: #d60000;
+}
+
+.filter-section .filters-surface_water {
+  background-color: #00b49c;
+  border-radius: 15px;
+  color: #dddddd;
+  font-size: 20px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: 20px;
+  padding-left: 10px;
+  padding-right: 5px;
+}
+
+.filter-section .filters-surface_water button {
+  background: none;
+  border: none;
+  font-weight: bold;
+  outline: none;
+}
+
+.filter-section .filters-surface_water button:hover {
   color: #d60000;
 }
 
@@ -177,7 +313,6 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  overflow: auto;
   font-size: 18px;
 }
 
@@ -185,22 +320,309 @@ body {
   border-collapse: collapse;
 }
 
-.table th {
+.table .th {
   background-color: #1a1a1a;
-  border: 2px solid black;
+  border: 5px solid black;
   font-weight: bold;
   padding: 10px;
   word-wrap: break-word;
 }
 
+.table tbody td {
+  height: 50px;
+  padding: 10px;
+}
+
 .table tbody tr:nth-child(odd) {
-  background-color: #5e5c5c;
+  background-color: gray;
   text-align: center;
 }
 
 .table tbody tr:nth-child(even) {
-  background-color: #c3c3c3;
+  background-color: #cccccc;
   color: black;
   text-align: center;
+}
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 140px;
+  height: 140px;
+}
+
+.droid {
+  --size: 140px;
+  position: absolute;
+  margin-left: 0;
+  width: var(--size);
+  bottom: 20%;
+  left: 10%;
+  z-index: 4;
+  -webkit-animation: wobble 5s ease-in-out infinite;
+          animation: wobble 5s ease-in-out infinite;
+}
+
+.radios {
+  position: absolute;
+  -webkit-transition: left 0.6s;
+  transition: left 0.6s;
+  left: 0%;
+}
+
+.radio {
+  background: #f0e5d6;
+  position: absolute;
+  width: 2px;
+}
+
+.radio.short {
+  height: 20px;
+  top: -60px;
+  left: 50px;
+}
+
+.radio.long {
+  border-top: 6px solid #020204;
+  border-bottom: 6px solid #020204;
+  height: 36px;
+  top: -78px;
+  left: 56px;
+}
+
+.head {
+  background: #dad5cd;
+  border: 1px solid black;
+  border-radius: 90px 90px 14px 14px;
+  -moz-border-radius: 90px 90px 14px 14px;
+  -webkit-border-radius: 90px 90px 14px 14px;
+  height: 56px;
+  margin-left: -45px;
+  overflow: hidden;
+  position: absolute;
+  width: 90px;
+  z-index: 1;
+  top: -46px;
+  left: 50%;
+}
+
+.band {
+  position: absolute;
+  width: 100%;
+}
+
+.band.one {
+  background: #9f9a9a;
+  height: 6px;
+  z-index: 1;
+  top: 6px;
+  opacity: 0.8;
+}
+
+.band.two {
+  background: #d27c47;
+  height: 4px;
+  top: 17px;
+}
+
+.band.three {
+  background: #bcb3b3;
+  height: 4px;
+  top: 27px;
+}
+
+.eyes {
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  -webkit-transition: left 0.6s;
+  transition: left 0.6s;
+  left: 26%;
+  z-index: 10;
+}
+
+.eye {
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+}
+
+.eye.one {
+  background: #0f0f1a;
+  border: 4px solid #d0c5b5;
+  height: 30px;
+  width: 30px;
+  top: 12px;
+  left: 12%;
+}
+
+.eye.one::after {
+  background: white;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 3px;
+  position: absolute;
+  width: 3px;
+  top: 4px;
+  right: 4px;
+}
+
+.eye.two {
+  background: #ddd2c2;
+  border: 1px solid #06060e;
+  height: 16px;
+  width: 16px;
+  top: 30px;
+  left: 40%;
+}
+
+.eye.two::after {
+  background: #07070b;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+}
+
+.body {
+  background: #ded7ce;
+  border-radius: 50%;
+  height: var(--size);
+  overflow: hidden;
+  position: relative;
+  width: var(--size);
+  -webkit-animation: roll 5.2s linear infinite;
+          animation: roll 5.2s linear infinite;
+}
+
+.lines {
+  border: 2px solid #a7916c;
+  border-radius: 50%;
+  height: 400px;
+  width: 400px;
+  position: absolute;
+  opacity: 0.6;
+}
+
+.lines.two {
+  top: -10px;
+  left: -250px;
+}
+
+.circle {
+  background: #b46636;
+  border-radius: 50%;
+  height: 70px;
+  margin-left: -35px;
+  width: 70px;
+  position: absolute;
+}
+
+.circle::after {
+  background: #d1c3ad;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 70%;
+  margin-top: -35%;
+  margin-left: -35%;
+  position: absolute;
+  width: 70%;
+  top: 50%;
+  left: 50%;
+}
+
+.circle.one {
+  margin-left: -40px;
+  height: 80px;
+  width: 90px;
+  top: 6%;
+  left: 50%;
+}
+
+.circle.two {
+  height: 38px;
+  width: 76px;
+  -webkit-transform: rotate(40deg);
+          transform: rotate(40deg);
+  top: 70%;
+  left: 18%;
+}
+
+.circle.two::after {
+  top: 110%;
+}
+
+.circle.three {
+  height: 30px;
+  -webkit-transform: rotate(-50deg);
+          transform: rotate(-50deg);
+  top: 66%;
+  left: 90%;
+}
+
+.circle.three::after {
+  top: 110%;
+}
+
+@-webkit-keyframes wobble {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+}
+
+@keyframes wobble {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+}
+
+@-webkit-keyframes roll {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes roll {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 /*# sourceMappingURL=App.css.map */
