creating remove button and ajusting CSS

--- a/src/App.css
+++ b/src/App.css
@@ -7,27 +7,30 @@ body {
   color: white;
 }
 
-body image {
-  opacity: 0.5;
+.show-filters {
+  margin: 0;
+  padding: 0 0 0 40px;
+  font-size: 1.2em;
 }
 
-h1{
-  font-size: 45px;
-  font-weight: 500;
-}
-
-select {
-  padding: 5px 10px;
+.remove-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 10px;
+  color: white;
+  font-size: 1.4em;
 }
 
 .name-filter,
 .column-filter{
-  padding: 15px;
-  font-weight: 900;
-  font-size: 18px;
+  padding: 35px;
+  margin: 0;
 }
 
 .table {
   color: white;
   font-size: 1.1em;
 }
+
