--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  /* border: brown solid 1px; */
+}
+
 body {
   font-family: Helvetica, sans-serif;
   font-size: 1.2em;
