--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
 }
 
 body {
-  font-family: Helvetica, sans-serif;
-  font-size: 1.2em;
+  font-family: Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: 650;
   padding: 1.5em;
 }
