Added style at header

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
 * {
   box-sizing: border-box;
-  /* border: brown solid 1px; */
 }
 
 body {
