--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -1,4 +1,6 @@
 .filters-container {
-  width: 55%;
   padding: 0.8rem;
+  margin: 0.8rem 0;
+  border: 0.1rem solid navy;
+  border-radius: 5px;
 }
